@@ -1,0 +1,3 @@
+obj
+*.d
+.make.depend
